--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cálculo IMC</title>
 
     <link rel="stylesheet" href="style.css" />
+</head>
 
 <body>
     <div id="app">
@@ -32,6 +33,5 @@
     </div>
 
     <script src="./javascript.js"></script>
-</body>
-
+ </body>
 </html>
